@@ -7,6 +7,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import it.gov.pagopa.common.reactive.mongo.MongoTest;
 import it.gov.pagopa.idpay.transactions.enums.PosType;
+import it.gov.pagopa.idpay.transactions.enums.RewardBatchAssignee;
 import it.gov.pagopa.idpay.transactions.enums.RewardBatchStatus;
 import it.gov.pagopa.idpay.transactions.model.RewardBatch;
 import java.time.LocalDateTime;
@@ -47,6 +48,7 @@ class RewardBatchSpecificRepositoryImplTest {
         .month("2025-11")
         .posType(PosType.PHYSICAL)
         .status(RewardBatchStatus.CREATED)
+        .assigneeLevel(RewardBatchAssignee.L1)
         .partial(false)
         .name("novembre 2025")
         .startDate(LocalDateTime.of(2025, 11, 1, 0, 0))
@@ -63,6 +65,7 @@ class RewardBatchSpecificRepositoryImplTest {
         .businessName("Test business")
         .month("2025-11")
         .posType(PosType.ONLINE)
+        .assigneeLevel(RewardBatchAssignee.L1)
         .status(RewardBatchStatus.CREATED)
         .partial(false)
         .name("novembre 2025")
@@ -85,7 +88,12 @@ class RewardBatchSpecificRepositoryImplTest {
   @Test
   void findRewardBatchByMerchantId_shouldReturnAllBatches() {
     Pageable pageable = PageRequest.of(0, 10);
-    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(MERCHANT, pageable);
+    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(
+        MERCHANT,
+        null,
+        null,
+        pageable
+    );
 
     List<RewardBatch> list = result.toStream().toList();
     assertEquals(2, list.size());
@@ -95,14 +103,23 @@ class RewardBatchSpecificRepositoryImplTest {
 
   @Test
   void getCount_shouldReturnCorrectNumber() {
-    Mono<Long> countMono = rewardBatchSpecificRepository.getCount(MERCHANT);
+    Mono<Long> countMono = rewardBatchSpecificRepository.getCount(
+        MERCHANT,
+        null,
+        null
+    );
     Long count = countMono.block();
     assertEquals(2L, count);
   }
 
   @Test
   void findRewardBatchByMerchantId_withDefaultPageable_shouldReturnSortedBatches() {
-    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(MERCHANT, null);
+    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(
+        MERCHANT,
+        null,
+        null,
+        null
+    );
     List<RewardBatch> list = result.toStream().toList();
     assertEquals(2, list.size());
     assertEquals("novembre 2025", list.get(0).getName());
@@ -113,21 +130,31 @@ class RewardBatchSpecificRepositoryImplTest {
   void findRewardBatchByMerchantId_withPagination_shouldRespectPageSize() {
     Pageable firstPage = PageRequest.of(0, 1, Sort.by("id").ascending());
     List<RewardBatch> page1 = rewardBatchSpecificRepository
-        .findRewardBatchByMerchantId(MERCHANT, firstPage)
+        .findRewardBatchByMerchantId(
+            MERCHANT,
+            null,
+            null,
+            firstPage
+        )
         .toStream().toList();
 
     assertEquals(1, page1.size());
-    assertEquals("batch1", page1.get(0).getId());
+    assertEquals("batch1", page1.getFirst().getId());
 
     Pageable secondPage = PageRequest.of(1, 1, Sort.by("id").ascending());
     List<RewardBatch> page2 = rewardBatchSpecificRepository
-        .findRewardBatchByMerchantId(MERCHANT, secondPage)
+        .findRewardBatchByMerchantId(
+            MERCHANT,
+            null,
+            null,
+            secondPage
+        )
         .toStream().toList();
 
     assertEquals(1, page2.size());
-    assertEquals("batch2", page2.get(0).getId());
+    assertEquals("batch2", page2.getFirst().getId());
 
-    assertNotEquals(page1.get(0).getId(), page2.get(0).getId());
+    assertNotEquals(page1.getFirst().getId(), page2.getFirst().getId());
   }
 
   @Test
@@ -135,7 +162,11 @@ class RewardBatchSpecificRepositoryImplTest {
     Pageable pageable = PageRequest.of(0, 10);
 
     List<RewardBatch> result = rewardBatchSpecificRepository
-        .findRewardBatch(pageable)
+        .findRewardBatch(
+            null,
+            null,
+            pageable
+        )
         .toStream()
         .toList();
 
@@ -146,7 +177,10 @@ class RewardBatchSpecificRepositoryImplTest {
 
   @Test
   void getCountWithoutMerchant_shouldReturnTotalCount() {
-    Long count = rewardBatchSpecificRepository.getCount().block();
+    Long count = rewardBatchSpecificRepository.getCount(
+        null,
+        null
+    ).block();
     assertEquals(2L, count);
   }
 
@@ -168,5 +202,153 @@ class RewardBatchSpecificRepositoryImplTest {
     assertEquals(updated.getInitialAmountCents(), fromDb.getInitialAmountCents());
     assertEquals(updated.getNumberOfTransactions(), fromDb.getNumberOfTransactions());
     assertNotNull(fromDb.getUpdateDate());
+  }
+
+  @Test
+  void findRewardBatchByMerchantId_withSpecificStatus_shouldFilterCorrectly() {
+    RewardBatch batch3 = RewardBatch.builder()
+        .id("batch3")
+        .merchantId(MERCHANT)
+        .businessName("Test business")
+        .month("2025-12")
+        .posType(PosType.PHYSICAL)
+        .status(RewardBatchStatus.SENT)
+        .assigneeLevel(RewardBatchAssignee.L1)
+        .partial(false)
+        .name("dicembre 2025")
+        .startDate(LocalDateTime.of(2025, 12, 1, 0, 0))
+        .endDate(LocalDateTime.of(2025, 12, 31, 23, 59))
+        .initialAmountCents(0L)
+        .numberOfTransactions(0L)
+        .numberOfTransactionsElaborated(0L)
+        .reportPath(null)
+        .build();
+
+    rewardBatchRepository.save(batch3).block();
+
+    Pageable pageable = PageRequest.of(0, 10);
+
+    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(
+        MERCHANT,
+        RewardBatchStatus.SENT.name(),
+        null,
+        pageable
+    );
+
+    List<RewardBatch> list = result.toStream().toList();
+    assertEquals(1, list.size());
+    assertEquals("batch3", list.getFirst().getId());
+    assertEquals(RewardBatchStatus.SENT, list.getFirst().getStatus());
+  }
+
+  @Test
+  void findRewardBatchByMerchantId_withSpecificAssigneeLevel_shouldFilterCorrectly() {
+    RewardBatch batch3 = RewardBatch.builder()
+        .id("batch3")
+        .merchantId(MERCHANT)
+        .businessName("Test business")
+        .month("2025-12")
+        .posType(PosType.PHYSICAL)
+        .status(RewardBatchStatus.CREATED)
+        .assigneeLevel(RewardBatchAssignee.L2)
+        .partial(false)
+        .name("dicembre 2025")
+        .startDate(LocalDateTime.of(2025, 12, 1, 0, 0))
+        .endDate(LocalDateTime.of(2025, 12, 31, 23, 59))
+        .initialAmountCents(0L)
+        .numberOfTransactions(0L)
+        .numberOfTransactionsElaborated(0L)
+        .reportPath(null)
+        .build();
+
+    rewardBatchRepository.save(batch3).block();
+
+    Pageable pageable = PageRequest.of(0, 10);
+    Flux<RewardBatch> result = rewardBatchSpecificRepository.findRewardBatchByMerchantId(
+        MERCHANT,
+        null,
+        RewardBatchAssignee.L2.name(),
+        pageable
+    );
+
+    List<RewardBatch> list = result.toStream().toList();
+    assertEquals(1, list.size());
+    assertEquals("batch3", list.getFirst().getId());
+    assertEquals(RewardBatchAssignee.L2, list.getFirst().getAssigneeLevel());
+  }
+
+  @Test
+  void findRewardBatch_withSpecificStatus_shouldFilterCorrectly_status_EVALUATING() {
+    RewardBatch batch3 = RewardBatch.builder()
+        .id("batch3")
+        .merchantId(MERCHANT)
+        .businessName("Test business")
+        .month("2025-12")
+        .posType(PosType.PHYSICAL)
+        .status(RewardBatchStatus.EVALUATING)
+        .assigneeLevel(RewardBatchAssignee.L1)
+        .partial(false)
+        .name("dicembre 2025")
+        .startDate(LocalDateTime.of(2025, 12, 1, 0, 0))
+        .endDate(LocalDateTime.of(2025, 12, 31, 23, 59))
+        .initialAmountCents(0L)
+        .numberOfTransactions(0L)
+        .numberOfTransactionsElaborated(0L)
+        .reportPath(null)
+        .build();
+
+    rewardBatchRepository.save(batch3).block();
+
+    Pageable pageable = PageRequest.of(0, 10);
+
+    List<RewardBatch> result = rewardBatchSpecificRepository
+        .findRewardBatch(
+            RewardBatchStatus.EVALUATING.name(),
+            null,
+            pageable
+        )
+        .toStream()
+        .toList();
+
+    assertEquals(1, result.size());
+    assertEquals("batch3", result.getFirst().getId());
+    assertEquals(RewardBatchStatus.EVALUATING, result.getFirst().getStatus());
+  }
+
+  @Test
+  void findRewardBatch_withSpecificAssigneeLevel_shouldFilterCorrectly() {
+    RewardBatch batch3 = RewardBatch.builder()
+        .id("batch3")
+        .merchantId(MERCHANT)
+        .businessName("Test business")
+        .month("2025-12")
+        .posType(PosType.PHYSICAL)
+        .status(RewardBatchStatus.CREATED)
+        .assigneeLevel(RewardBatchAssignee.L3)
+        .partial(false)
+        .name("dicembre 2025")
+        .startDate(LocalDateTime.of(2025, 12, 1, 0, 0))
+        .endDate(LocalDateTime.of(2025, 12, 31, 23, 59))
+        .initialAmountCents(0L)
+        .numberOfTransactions(0L)
+        .numberOfTransactionsElaborated(0L)
+        .reportPath(null)
+        .build();
+
+    rewardBatchRepository.save(batch3).block();
+
+    Pageable pageable = PageRequest.of(0, 10);
+    List<RewardBatch> result = rewardBatchSpecificRepository
+        .findRewardBatch(
+            null,
+            RewardBatchAssignee.L3.name(),
+            pageable
+        )
+        .toStream()
+        .toList();
+
+    assertEquals(1, result.size());
+    assertEquals("batch3", result.getFirst().getId());
+    assertEquals(RewardBatchAssignee.L3, result.getFirst().getAssigneeLevel());
   }
 }
